// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextEditArea English should render the component and matches it against stored snapshot 1`] = `
<DocumentFragment>
  <div
    class="position-relative p-4 addText rounded-8"
    data-testid="TextEditArea"
  >
    <div
      class="false"
    >
      <div>
        <label
          class="textareaLabel display-6 form-label"
          for="textarea"
        >
          addText (English)
        </label>
        <textarea
          class="textarea border-0 p-0 display-3 form-control"
          id="textarea"
          placeholder="typingPlaceholder"
        />
      </div>
      <div
        class="keyboardIcon d-none  d-md-block  position-absolute"
      >
        <button
          class="d-flex info normal btn btn-link"
          data-testid="Button"
          type="button"
        >
          <span
            style="box-sizing: border-box; display: inline-block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: relative; max-width: 100%;"
          >
            <span
              style="box-sizing: border-box; display: block; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; max-width: 100%;"
            >
              <img
                alt=""
                aria-hidden="true"
                src="data:image/svg+xml,%3csvg%20xmlns=%27http://www.w3.org/2000/svg%27%20version=%271.1%27%20width=%2724%27%20height=%2724%27/%3e"
                style="display: block; max-width: 100%; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px;"
              />
            </span>
            <img
              alt="keyboardBtn"
              data-nimg="intrinsic"
              decoding="async"
              src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
              style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
            />
            <noscript />
          </span>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextEditArea Hindi should render the component and matches it against stored snapshot in hindi 1`] = `
<DocumentFragment>
  <div
    class="position-relative p-4 addText rounded-8"
    data-testid="TextEditArea"
  >
    <div
      class="false"
    >
      <div>
        <label
          class="textareaLabel display-6 form-label"
          for="textarea"
        >
          addText (Hindi)
        </label>
        <textarea
          class="textarea border-0 p-0 display-3 form-control"
          id="textarea"
          placeholder="typingPlaceholder"
        />
      </div>
      <div
        class="keyboardIcon d-none  d-md-block  position-absolute"
      >
        <button
          class="d-flex info normal btn btn-link"
          data-testid="Button"
          type="button"
        >
          <span
            style="box-sizing: border-box; display: inline-block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: relative; max-width: 100%;"
          >
            <span
              style="box-sizing: border-box; display: block; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; max-width: 100%;"
            >
              <img
                alt=""
                aria-hidden="true"
                src="data:image/svg+xml,%3csvg%20xmlns=%27http://www.w3.org/2000/svg%27%20version=%271.1%27%20width=%2724%27%20height=%2724%27/%3e"
                style="display: block; max-width: 100%; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px;"
              />
            </span>
            <img
              alt="keyboardBtn"
              data-nimg="intrinsic"
              decoding="async"
              src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
              style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
            />
            <noscript />
          </span>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
